[gd_scene load_steps=4 format=3 uid="uid://djeo14e2tmoe4"]

[ext_resource type="Script" uid="uid://cugw4lyqhl4uq" path="res://control.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://bi3ve4kqk21h3" path="res://statbar.tscn" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://v64po0lspxg0" path="res://menu_buttons.gd" id="2_h2yge"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="bg container" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(600, 800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -400.0
offset_right = 300.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainersdfgh" type="MarginContainer" parent="bg container"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="bg container/MarginContainersdfgh"]
visible = false
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="Margin" type="MarginContainer" parent="bg container"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Vbox" type="VBoxContainer" parent="bg container/Margin"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="menu buttons" type="PanelContainer" parent="bg container/Margin/Vbox" node_paths=PackedStringArray("main", "stats")]
layout_mode = 2
script = ExtResource("2_h2yge")
main = NodePath("../main contents/base")
stats = NodePath("../main contents/info")

[node name="MarginContainer" type="MarginContainer" parent="bg container/Margin/Vbox/menu buttons"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="bg container/Margin/Vbox/menu buttons/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="quit" type="Button" parent="bg container/Margin/Vbox/menu buttons/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "quit"

[node name="main" type="Button" parent="bg container/Margin/Vbox/menu buttons/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "main"

[node name="stats" type="Button" parent="bg container/Margin/Vbox/menu buttons/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "stats"

[node name="inventory" type="Button" parent="bg container/Margin/Vbox/menu buttons/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Inv"

[node name="main contents" type="PanelContainer" parent="bg container/Margin/Vbox"]
custom_minimum_size = Vector2(0, 740)
layout_mode = 2

[node name="base" type="VBoxContainer" parent="bg container/Margin/Vbox/main contents"]
visible = false
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="top panel" type="PanelContainer" parent="bg container/Margin/Vbox/main contents/base"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="bottom panel" type="PanelContainer" parent="bg container/Margin/Vbox/main contents/base"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="bg container/Margin/Vbox/main contents/base/bottom panel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="bg container/Margin/Vbox/main contents/base/bottom panel/MarginContainer"]
layout_mode = 2

[node name="choices" type="VBoxContainer" parent="bg container/Margin/Vbox/main contents/base/bottom panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="bg container/Margin/Vbox/main contents/base/bottom panel/MarginContainer/VBoxContainer/choices"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "1: sdfgsdrgser"

[node name="Button2" type="Button" parent="bg container/Margin/Vbox/main contents/base/bottom panel/MarginContainer/VBoxContainer/choices"]
layout_mode = 2
text = "2: sdfgsdrgser"

[node name="Button3" type="Button" parent="bg container/Margin/Vbox/main contents/base/bottom panel/MarginContainer/VBoxContainer/choices"]
layout_mode = 2
text = "2: sdfgsdrgser"

[node name="Button4" type="Button" parent="bg container/Margin/Vbox/main contents/base/bottom panel/MarginContainer/VBoxContainer/choices"]
layout_mode = 2
text = "2: sdfgsdrgser"

[node name="RichTextLabel" type="RichTextLabel" parent="bg container/Margin/Vbox/main contents/base/bottom panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "possessed  from  the  first  the  art  of  disappearing  swiftly  and silently,  when  large  folk  whom  they  do  not  wish  to  meet  come blundering  by;  and  this  art  they  have  developed  until  to  Men it  may  seem  magical.  But  Hobbits  have  never,  in  fact,  studied magic  of  any  kind,  and  their  elusiveness  is  due  solely  to a  professional  skill  that  heredity  and  practice,  and  a  close friendship  with  the  earth,  have  rendered  inimitable  by  bigger and  clumsier  races. "

[node name="info" type="VBoxContainer" parent="bg container/Margin/Vbox/main contents"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="bg container/Margin/Vbox/main contents/info"]
visible = false
layout_mode = 2

[node name="Label4" type="Label" parent="bg container/Margin/Vbox/main contents/info"]
visible = false
layout_mode = 2
text = "Energy: 60/100"

[node name="Label" type="Label" parent="bg container/Margin/Vbox/main contents/info"]
visible = false
layout_mode = 2
text = "Hunger: 8/100"

[node name="Label2" type="Label" parent="bg container/Margin/Vbox/main contents/info"]
visible = false
layout_mode = 2
text = "Thirst: 8/100"

[node name="Label3" type="Label" parent="bg container/Margin/Vbox/main contents/info"]
visible = false
layout_mode = 2
text = "Body Tempature: 60/100"

[node name="Control" parent="bg container/Margin/Vbox/main contents/info" instance=ExtResource("2_0xm2m")]
layout_mode = 2

[node name="Control2" parent="bg container/Margin/Vbox/main contents/info" instance=ExtResource("2_0xm2m")]
layout_mode = 2
bar_name = "Hunger"
global_value = "hunger"

[connection signal="pressed" from="bg container/Margin/Vbox/menu buttons/MarginContainer/HBoxContainer/quit" to="bg container/Margin/Vbox/menu buttons" method="_on_quit_pressed"]
[connection signal="pressed" from="bg container/Margin/Vbox/menu buttons/MarginContainer/HBoxContainer/main" to="bg container/Margin/Vbox/menu buttons" method="_on_main_pressed"]
[connection signal="pressed" from="bg container/Margin/Vbox/menu buttons/MarginContainer/HBoxContainer/stats" to="bg container/Margin/Vbox/menu buttons" method="_on_stats_pressed"]
[connection signal="pressed" from="bg container/Margin/Vbox/menu buttons/MarginContainer/HBoxContainer/inventory" to="bg container/Margin/Vbox/menu buttons" method="_on_inventory_pressed"]
